fix: general layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 html, body {
+  overscroll-behavior: none;
   height: 100%;
   margin: 0;
   padding: 0;
